--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -57,7 +57,7 @@ div{
   margin: 100px auto 100px auto;
   background-color: white;
   width: 50%;
-  text-align: center;
+  text-align: left;
 
 }
 .top-container{
